--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ section {
 <section>
   <canvas id='beerCanvas'></canvas>
   <div class="coming_content">
-    <h1>Coming Soon</h1>
+    <h1>TIMESWEN</h1>
     <div class="separator_container">
       <div class="separator line_separator">
         <span>
@@ -122,7 +122,7 @@ section {
         </span>
       </div>
     </div>
-    <h3>I like beer. Oh, and Javascript too.</h3>
+    <h3>I am content hungry. <br>Breaking news and current events from around the globe.</h3>
   </div>
 </section>
 <script>var canvas = document.getElementById('beerCanvas');
