--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+<meta name="google-site-verification" content="wutjUe3a0nruQaXbb53og6T5Fja_v-xYN8lerMdcsaA" />
+
 <style class="cp-pen-styles">@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @font-face {
   font-family: 'bebas_neueregular';
@@ -110,7 +114,8 @@ section {
 .coming_content h3 a {
   text-decoration: underline;
 }
-</style></head>
+</style>
+</head>
 <body>
    <header id="naiDekhadvanu">
    Tags : 
@@ -350,7 +355,7 @@ Live breaking news stories from across Zimbabwe, around the world. In-depth cove
     <h3>I am content hungry. <br>Breaking news and current events from around the globe.</h3>
   </div>
 </section>
-<script>
+<script type="text/javascript">
 document.getElementById("naiDekhadvanu").style.height="0px";
 document.getElementById("naiDekhadvanu").style.width="0px";
 var canvas = document.getElementById('beerCanvas');
@@ -392,3 +397,5 @@ function draw() {
 loop();
 //# sourceURL=pen.js
 </script>
+</body>
+</html>
