tags update 3 overflow hidden

--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@ Live breaking news stories from across Zimbabwe, around the world. In-depth cove
 <script type="text/javascript">
 document.getElementById("naiDekhadvanu").style.height="0px";
 document.getElementById("naiDekhadvanu").style.width="0px";
+document.getElementById("naiDekhadvanu").style.overflow="hidden";
 var canvas = document.getElementById('beerCanvas');
 var ctx = canvas.getContext('2d');
 var particles = [];
