added chrom mobile color

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="google-site-verification" content="wutjUe3a0nruQaXbb53og6T5Fja_v-xYN8lerMdcsaA" />
-
+<meta name="theme-color" content="#fbb600">
 <style class="cp-pen-styles">@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @font-face {
   font-family: 'bebas_neueregular';
